--- a/pom.xml
+++ b/pom.xml
@@ -46,34 +46,40 @@
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
+            <scope>provided</scope>
         </dependency>
    
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jaxrs</artifactId>
-            <version>${resteasy.version}</version>
+            <version>${resteasy.version}</version> 
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jaxb-provider</artifactId>
-            <version>${resteasy.version}</version>
+            <version>${resteasy.version}</version> 
+            <scope>provided</scope>
         </dependency> 
    
         <!--To enable automatic scanning, you must also include the resteasy-servlet-initializer artifact-->
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-servlet-initializer</artifactId>
-            <version>${resteasy.version}</version>
+            <version>${resteasy.version}</version> 
+            <scope>provided</scope>
         </dependency> 
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jackson2-provider</artifactId>
-            <version>${resteasy.version}</version>
+            <version>${resteasy.version}</version> 
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-multipart-provider</artifactId>
-            <version>${resteasy.version}</version>
+            <version>${resteasy.version}</version> 
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
